# lstalk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon  console.c  lstalk.c  lstalk.h  main.c  test_server.c  tests.c
examples/: basic.c  custom_allocator.c  document_symbols.c  example.cpp  hover.c  semantic_tokens.c  utility.h
scripts/: build.bat  build.sh  clean.bat  clean.sh  defines.bat  defines.sh  generate.bat  generate.sh
src/lib/: lstalk.c  lstalk.h
src/lib/internal/: array.c  array.h
src/test/: main.c  test.h
